buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }
    dependencies {
        classpath 'com.bmuschko:gradle-docker-plugin:3.2.5'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '2.0.2.RELEASE'
    id 'io.spring.dependency-management' version '1.0.5.RELEASE'
}

apply plugin: 'com.bmuschko.docker-java-application'

docker {
    registryCredentials {
        url = 'https://netifi.azurecr.io'
        username = 'netifi'
        password = 'xv06MJfkZA17wCmy1v9e7kanMtvTsg5+'
    }
    javaApplication {
        baseImage = 'openjdk:8-jre-alpine'
        maintainer = 'Netifi'
        ports = []
        tag = "netifi.azurecr.io/fanout/proteus-chat-server-demo:latest"
    }
}


group 'io.netifi.proteus.chatDemo'
version '1.0-SNAPSHOT'

mainClassName = 'io.netifi.proteus.demo.ChatStringMain'
sourceCompatibility = 1.8

dependencyManagement {
    imports {
        mavenBom "io.spring.platform:platform-bom:${springbomVersion}"
    }
}


repositories {
    mavenLocal()
    jcenter()
}


dependencies {
    compile project(":chat-idl")
    compile project(":random-string-idl")

    compile "io.netifi.proteus:client:0.7.19"
    compile 'com.google.protobuf:protobuf-java:3.5.0'
    compile 'io.micrometer:micrometer-registry-atlas:1.0.3'

    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
    compile 'org.apache.logging.log4j:log4j-core:2.8.2'
    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.2'
}

mainClassName = 'io.netifi.proteus.demo.ChatStringMain'

applicationDefaultJvmArgs = [
        '-XX:+UnlockExperimentalVMOptions',
        '-XX:+UseCGroupMemoryLimitForHeap',
        '-XX:MaxRAMFraction=1',
        '-XX:+UseG1GC',
        '-XX:MaxGCPauseMillis=200',
        '-XX:+AlwaysPreTouch',
        '-XX:+UseStringDeduplication',
        '-XX:+ExplicitGCInvokesConcurrent',
        '-XX:+ParallelRefProcEnabled',
        '-XX:HeapDumpPath=/',
        '-XX:+PrintGCDateStamps',
        '-verbose:gc',
        '-XX:+PrintGCDetails',
        '-Xloggc:gc.log',
        '-XX:+UseGCLogFileRotation',
        '-XX:NumberOfGCLogFiles=10',
        '-XX:GCLogFileSize=100M',
        '-DLog4jContextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector'
]

configurations.all {
    resolutionStrategy {
        dependencySubstitution {
            substitute module('com.google.guava:guava') with module('com.google.guava:guava:22.0')
        }
    }
}